Cambios agregados a  index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Hola mundo!</title>
 </head>
 <body>
-    <p>Hola estudiantes, este es mi sitio web @humbertviveros</p>
+    <p>Hola amigos! Este es mi sitio web @humbertviveros</p>
 </body>
 </html>
